# ml-in-fcs

./: .gitignore  CLAUDE.md  GENERATION_FAILURE_ANALYSIS.md  LICENSE.md  ML_project.py  README.md  README_ref.md  SAMPLING_DESIGN_ANALYSIS.tex  experiments_all.py  paper_underspecifications.md  pyproject.toml  requirements.txt  train_all.py
FTS_diffusion_presentation/: beamerinnerthemeeth.sty  main.tex
NeurIPS_Paper/: checklist.tex  neurips_2026.tex  references.bib
configs/: default.yaml
data/: data_toy_l10-20_segmentation.csv
docs/: GENERATION_FAILURE_ANALYSIS.md  PAPER_REVISION_HANDOFF.md  README.md  drift_component.md  paper_experiments_checklist.md  paper_underspecifications.md  predictable_drift.md
drift_component/: DRIFT_COMPONENT_README.md  README.md  predictable_drift_colab.ipynb  pyproject.toml  requirements.txt
drift_component/configs/: drift_penalty.yaml
drift_component/docs/: predictable_drift.md
drift_component/outputs/drift_diagnostics/toy_inputs/: block_shuffled_iid_returns.csv  iid_gaussian_returns.csv
drift_component/scripts/: evaluate_predictable_drift.py  run_drift_incorporated_selection.py  run_end_to_end_drift_diagnostics.py  run_light_drift_experiment.py  run_neurips_end_to_end_diagnostics.py  run_sign_drift_sweep.py
drift_component/src/fts_diffusion/: __init__.py
drift_component/src/fts_diffusion/evaluation/: __init__.py  stylized.py
experiments/: downstream.py  metrics_quant.py  qual_analysis.py  setup.py  stylized_facts.py  utils_downstream.py
figures/: presentation.tex
fts-diffusion-ref/: main.py  requirements_ref.txt
hpc-implementation/: README.md  training_README.md
models/: load_models.py  pattern_evolution_module.py  utils_recognition.py  utils_sampling.py
notebooks/: B3_SISC_Simulated_Investigation.ipynb  FTS_Diffusion_Rollout_Debug.ipynb  FTS_Diffusion_Training.ipynb  README.md  TATR_Reduced_Replication.ipynb  TATR_Reduced_Replication_NoMC.ipynb  (+3 more)
(+1730 files in other folders)
