[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fts-diffusion-drift-component"
version = "0.1.0"
description = "Standalone predictable-drift diagnostics for FTS-Diffusion outputs."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
test = ["pytest>=8,<10"]
optional = ["scipy>=1.11,<2", "torch>=2.2,<3"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
